--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -21,7 +21,16 @@
     <property name="spacing">
      <number>0</number>
     </property>
-    <property name="margin">
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
      <number>0</number>
     </property>
     <item>
@@ -111,8 +120,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>325</width>
-           <height>666</height>
+           <width>356</width>
+           <height>664</height>
           </rect>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -165,7 +174,7 @@
    </property>
    <property name="minimumSize">
     <size>
-     <width>170</width>
+     <width>180</width>
      <height>270</height>
     </size>
    </property>
@@ -639,7 +648,7 @@
           </sizepolicy>
          </property>
          <property name="minimum">
-          <number>0</number>
+          <number>-1</number>
          </property>
          <property name="maximum">
           <number>255</number>
